MDEV-35041 [poc] Pass derivation from column to uservar in SELECT ... INTO ...